--- a/index.html
+++ b/index.html
@@ -22,27 +22,26 @@
 
 </head>
 <body>
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container-fluid">
+      <ul class="nav navbar-nav">
+      <li class="active"><a href="#">Explore</a></li>
+      <li><a href="#">Start a project</a></li>
+      <li><a href="#">About us</a></li>
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+      <li><a href="#"><img src="images/logo.png"></a></li>
+      
+    </ul>
+  </div>
+</nav>
 <div class="your-class">
   <div><img src="images/jumbotron-flowers.jpg"></div>
   <div><img src="images/jumbotron-bike.jpg" "></div>
   <div><img src="images/jumbotron-beer.jpg"></div>
  </div>
  
-<nav class="navbar navbar-default navbar-fixed-top">
-	<div class="container">
-	
-	<ul class="nav nav-pills nav-justified">
-	
-		<li class="nav-item" active><a href="#"></a>Explore</li>
-		<li class="nav-item"><a href="#"></a>Start a project</li>
-		<li class="nav-item"><a href="#"></a>About us</li>
-	</ul>
-	<ul class="nav nav-pills nav-justify-end">
-		<li class="nav-item"><img src="images/logo.png"></li>
-	</ul>
-		
-	</div>
-</nav>
+
 <!-- jumbotron -->
 
 
