--- a/index.html
+++ b/index.html
@@ -39,18 +39,20 @@
   <div><img src="images/jumbotron-flowers.jpg"></div>
   <div><img src="images/jumbotron-bike.jpg" "></div>
   <div><img src="images/jumbotron-beer.jpg"></div>
- </div>
+ </div>  
  
 
 <!-- jumbotron -->
 
 
-	<div class="your_class">
+	<div class="carausel">
 		<div class="jumbotron jumbotron-bike">
+
 			<h1>GET GOING.</h1>
 			<p>Jumpstart your startup with some crowdsourced seed money, or support one of our 300,000,000+ creators and get rewards.</p>
 		</div>
 		<div class="jumbotron jumbtron-flowers">
+
 			<h1>GET THINKING.</h1>
 			<p>Meet like-minded individuals who will help fuel your creative juices.</p>
 		</div>
