--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	</title>
 	<!-- reset.css -->
 <link rel="stylesheet" type="text/css" href="css/reset.css">
+<link rel="stylesheet" type="text/css" href="css/style.css">
 	<!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 <!-- slick.css -->
@@ -35,11 +36,11 @@
     </ul>
   </div>
 </nav>
-<div class="your-class">
+<!-- <div class="your-class">
   <div><img src="images/jumbotron-flowers.jpg"></div>
   <div><img src="images/jumbotron-bike.jpg" "></div>
   <div><img src="images/jumbotron-beer.jpg"></div>
- </div>  
+ </div>   -->
  
 
 <!-- jumbotron -->
