--- a/index.html
+++ b/index.html
@@ -65,8 +65,12 @@
 			<h1>GET STARTED.</h1>
 			<p>What are you waiting for? Today's the day for your next big idea.</p>
 		</div>
+		
 	</div>
-
+	<div class="relative-wrapper">
+    		<a href="#" class="btn btn-primary btn-lg cta">Jump in</a>
+  		</div>
+	
 <!-- Projects -->
 <div class="container featured-project">
 	<div class="row">
@@ -145,7 +149,14 @@
 		 </div>
 	 </div>
 	
-
+<!-- final part -->
+	<div class="container fluid help">
+		<strong>Having trouble of thinking of an idea?</strong>
+		<p>
+			Inventorsâ€™ block strikes at the worst times. But thatâ€™s all changed with Jumpstartâ€™s Good Idea Generator Lite (GIGLi).
+		</p>
+		<a href="#" class="btn btn primary btn-lg"> Learn more </a>
+	</div>
 
   
 </body>
