--- a/index.html
+++ b/index.html
@@ -2,19 +2,22 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>
+	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title> Jumpstart
 	</title>
+<link href="https://fonts.googleapis.com/css?family=Monoton|Open+Sans:400,600,700" rel="stylesheet">
 	<!-- reset.css -->
 <link rel="stylesheet" type="text/css" href="css/reset.css">
 <link rel="stylesheet" type="text/css" href="css/style.css">
 	<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+ <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"> 
+<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
 <!-- slick.css -->
 <link rel="stylesheet" type="text/css" href="slick-1.6.0/slick/slick.css"/> 
 // Add the new slick-theme.css if you want the default styling
-<link rel="stylesheet" type="text/css" href="slick-1.6.0/slick/slick-theme.css"> 
-<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
-<script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<link rel="stylesheet" type="text/css" href="slick-1.6.0/slick/slick-theme.css">
+ <!-- script jquery -->
+<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 <script type="text/javascript" src="slick-1.6.0/slick/slick.js"></script>
 				
 <!-- main.js -->
@@ -23,19 +26,23 @@
 
 </head>
 <body>
-<nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container-fluid">
-      <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Explore</a></li>
-      <li><a href="#">Start a project</a></li>
-      <li><a href="#">About us</a></li>
-    </ul>
-    <ul class="nav navbar-nav navbar-right">
-      <li><a href="#"><img src="images/logo.png"></a></li>
-      
-    </ul>
+<div class="container-fluid">
+    <nav class= "navbar navbar-default navbar-fixed-top">
+      <ul class= "nav navbar-nav">
+        <li class= "active">
+          <a href="#">Explore</a>
+        </li>
+        <li>
+          <a href="#">Start a project</a>
+        </li>
+        <li>
+          <a href="#">About us</a>
+        </li>
+      </ul>
+      <img src="images/logo.png" class="navbar-brand navbar-right navbar-collapse" alt="jumpstart-logo">
+    </nav>
   </div>
-</nav>
+
 <!-- <div class="your-class">
   <div><img src="images/jumbotron-flowers.jpg"></div>
   <div><img src="images/jumbotron-bike.jpg" "></div>
@@ -44,29 +51,25 @@
  
 
 <!-- jumbotron -->
+	<div class="carousel">
+    <div class="jumbotron jumbotron-bike">
+      <h1>GET GOING.</h1>
+      <p>Jumpstart your startup with some crowdsourced seed money, or support one of our 300,000,000+ creators and get rewards.</p>
+    </div>
+    <div class="jumbotron jumbotron-beer">
+      <h1>GET THINKING.</h1>
+      <p>Meet like-minded individuals who will help fuel your creative juices.</p>
+    </div>
+    <div class="jumbotron jumbotron-flowers">
+      <h1>GET CREATING.</h1>
+      <p>Stop overthinking projects and begin putting them out into the world.</p>
+    </div>
+    <div class="jumbotron jumbotron-duffel">
+      <h1>GET STARTED.</h1>
+      <p>What are you waiting for? Today's the day for your next big idea.</p>
+    </div>
+  </div>
 
-
-	<div class="carausel">
-		<div class="jumbotron jumbotron-bike">
-
-			<h1>GET GOING.</h1>
-			<p>Jumpstart your startup with some crowdsourced seed money, or support one of our 300,000,000+ creators and get rewards.</p>
-		</div>
-		<div class="jumbotron jumbtron-flowers">
-
-			<h1>GET THINKING.</h1>
-			<p>Meet like-minded individuals who will help fuel your creative juices.</p>
-		</div>
-		<div class="jumbotron jumbotron-beer">
-			<h1>GET CREATING.</h1>
-			<p>Stop overthinking projects and begin putting them out into the world.</p>
-		</div>
-		<div class="jumbotron jumbotron-duffel">
-			<h1>GET STARTED.</h1>
-			<p>What are you waiting for? Today's the day for your next big idea.</p>
-		</div>
-		
-	</div>
 	<div class="relative-wrapper">
     		<a href="#" class="btn btn-primary btn-lg cta">Jump in</a>
   		</div>
