--- a/index.html
+++ b/index.html
@@ -5,24 +5,43 @@
 	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title> Jumpstart
 	</title>
-<link href="https://fonts.googleapis.com/css?family=Monoton|Open+Sans:400,600,700" rel="stylesheet">
+<!-- <link href="https://fonts.googleapis.com/css?family=Monoton|Open+Sans:400,600,700" rel="stylesheet">
 	<!-- reset.css -->
-<link rel="stylesheet" type="text/css" href="css/reset.css">
-<link rel="stylesheet" type="text/css" href="css/style.css">
-	<!-- Latest compiled and minified CSS -->
- <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"> 
-<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
+<!-- <link rel="stylesheet" type="text/css" href="css/reset.css"> -->
+<!-- <link rel="stylesheet" type="text/css" href="css/style.css">
+ -->	<!-- Latest compiled and minified CSS -->
+ <!-- <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">  -->
+<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">  -->
 <!-- slick.css -->
-<link rel="stylesheet" type="text/css" href="slick-1.6.0/slick/slick.css"/> 
-// Add the new slick-theme.css if you want the default styling
-<link rel="stylesheet" type="text/css" href="slick-1.6.0/slick/slick-theme.css">
+<!-- <link rel="stylesheet" type="text/css" href="slick-1.6.0/slick/slick.css"/>   -->
+<!-- // Add the new slick-theme.css if you want the default styling -->
+<!-- <link rel="stylesheet" type="text/css" href="slick-1.6.0/slick/slick-theme.css"> -->
  <!-- script jquery -->
-<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-<script type="text/javascript" src="slick-1.6.0/slick/slick.js"></script>
+<!-- <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script> -->
+<!-- <script type="text/javascript" src="slick-1.6.0/slick/slick.js"></script> -->
 				
 <!-- main.js -->
-<script type="text/javascript" src="js/main.js"></script>
-
+<!-- <script type="text/javascript" src="js/main.js"></script> --> --> -->
+<!-- <link rel="icon" href="./resources/favicon.png"> -->
+	<link rel="stylesheet" type="text/css" href="favicon.png">
+    <link href="https://fonts.googleapis.com/css?family=Monoton|Open+Sans:400,600,700" rel="stylesheet">
+    <!--four css for this project-->
+    <!-- <link rel="stylesheet" href="./resources/css/reset.css"> -->
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!--<link rel="stylesheet" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>-->
+    <!-- <link rel="stylesheet" href="./resources/css/slick.css">
+    <link rel="stylesheet" href="./resources/css/style.css"/> -->
+    <link rel="stylesheet" type="text/css" href="css/slick.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <!--three javascript files-->
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+    <!--<script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script> for some reason slick cdn isn't working for css or js so i have to do it locally-->
+    <script type="text/javascript" src="js/slick.min.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
+   <!--  <script type="text/javascript" src="./resources/js/slick.min.js"></script>
+    <script type="text/javascript" src="./resources/js/main.js"></script> -->
+    </head>
 
 </head>
 <body>
@@ -74,93 +93,86 @@
     		<a href="#" class="btn btn-primary btn-lg cta">Jump in</a>
   		</div>
 	
-<!-- Projects -->
-<div class="container featured-project">
-	<div class="row">
-		<h2 class="col-xs-12"> Featured project</h2>
-	</div>
-	<div class="row">
-		<div class="col-xs-12 col-md-6">
-			<div class="image-container">
-			<a href="#">
-				<img src="images/featured-project.png">
-			</a>
-		</div>
-	</div>
-	
-<div class="col-xs-6 col-md-3">
-	<h3>Deforest: A Documentary</h3>
-	<p>by Leo De Firenze</p>
-	<p>
-		DeFrost is a documentary about growing up in a little red house in a cold, harsh valley. This is a story about my mother's childhood. This film attempts to capture vignettes of her upbringing â€” her family, friends, pets, and eventual depature from a freezing valley in Northern Italy â€” through beautiful cinematography and narration.
-	</p>
-</div>
-<div class="col-xs-6 col-md-3 categories">
-	<h3>Product Categories</h3>
-	<ul>
-		<li>Art</li>
-		<li>Books</li>
-		<li>Crystals</li>
-		<li>Design</li>
-		<li>Doodles</li>
-		<li>Farming</li>
-		<li>Gadget</li>
-		<li>Hoverboards</li>
-		<li>Jams, Jellies, Etc.</li>
-		<li>Magazines</li>
-		<li>Plants</li>
-		<li>Snakes & Snake Equipment</li>
-		<li>Tables</li>
-		<li>Ventriliquist Figures</li>
-		<li>Yoyos</li>
-	</ul>
-	</div>
-</div><!--featured projects-->
-<!--Projects-->
-<div class="container">
-	<div class="row">
-		<h2 class="col-xs-12">Projects</h2>
-	</div>
-	<div class="row">
-		<div class="col-xs-12 col-sm-4 projects">
-			<div class="image-container">
-				<a href="#"><img src="images/project1.png"></a>
-			</div>
-			<h3>The right tignts</h3>
-			<p> by Riley Mac</p>
-			<p>These tights are 50 denier, beautifully constructed, hand-dyed, and guaranteed to last (no more ladders!). Made with high quality, completely toxic-free materials. Custom colors available to all backers.</p>
-		</div>
-		<div class="col-xs-12 col-sm-4 projects">
-			<div class="image-container">
-				<a href="#"><img src="images/project2.png"></a>
-			</div>
-			<h3>Pepermint smart house</h3>
-			<p>by Brian Mcdonald</p>
-			<p>
-				These tights are 50 denier, beautifully constructed, hand-dyed, and guaranteed to last (no more ladders!). Made with high quality, completely toxic-free materials. Custom colors available to all backers.
-			</p>
-		</div>
-		<div class="col-xs-12 col-sm-4 projects">
-			<div class="image-container">
-				<a href="#"><img src="images/project3.png"></a>
-			</div>
-			<h3>American Streetlife</h3>
-			<p>by patrick wallace</p>
-			<p>
-				I've been traveling around the United States for the past two years. I've slept on hundreds of couches, more than a few benches, and captured my experiences in this 120 page photo album.
-			</p>
-		 </div>
-	 </div>
-	
-<!-- final part -->
-	<div class="container fluid help">
-		<strong>Having trouble of thinking of an idea?</strong>
-		<p>
-			Inventorsâ€™ block strikes at the worst times. But thatâ€™s all changed with Jumpstartâ€™s Good Idea Generator Lite (GIGLi).
-		</p>
-		<a href="#" class="btn btn primary btn-lg"> Learn more </a>
-	</div>
-
-  
-</body>
+<!--featured project-->
+    <div class="container-fluid featured-project">
+      <!--title-->
+      <div class="row">
+        <h2 class="col-xs-12">Featured Project</h2>
+      </div>
+      <!--row of content-->
+      <div class="row">
+        <div class="col-xs-12 col-md-6">
+          <div class="image-container">
+            <img src="images/featured-project.png" alt="featured project">
+          </div>
+        </div>
+        <div class="col-xs-6 col-md-3">
+          <h3>DeFrost: A Documentary</h3>
+          <p>by Leo De Firenze</p>
+          <p>DeFrost is a documentary about growing up in a little red house in a cold, harsh valley. This is a story about my mother's childhood. This film attempts to capture vignettes of her upbringing â€” her family, friends, pets, and eventual depature from a freezing valley in Northern Italy â€” through beautiful cinematography and narration.</p>
+        </div>
+        <div class="col-xs-6 col-md-3">
+          <h3 id="categories">Product Categories</h3>
+          <ul>
+            <li>Art</li>
+            <li>Books</li>
+            <li>Crystals</li>
+            <li>Design</li>
+            <li>Doodles</li>
+            <li>Deedlybobs</li>
+            <li>Farming</li>
+            <li>Gadgets</li>
+            <li>Hoverboards</li>
+            <li>Jams, Jellies, Etc.</li>
+            <li>Magazines</li>
+            <li>Plants</li>
+            <li>Snakes & Snake Equipment</li>
+            <li>Tables</li>
+            <li>Ventriliquist Figures</li>
+            <li>Yoyos</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <!--projects-->
+    <div class="container-fluid projects">
+      <!--title-->
+      <div class="row">
+        <h2 class="col-xs-12">Projects</h2>
+      </div>
+      <!--row of content-->
+      <div class="row">
+        <div class="project-content col-md-4 col-xs-12">
+          <div class="image-container">
+            <img src="images/project1.png" alt="project 1">
+          </div>
+          <h3>The Right Tights</h3>
+          <p>by Riley Mae</p>
+          <p>These tights are 50 denier, beautifully constructed, hand-dyed, and guaranteed to last (no more ladders!). Made with high quality, completely toxic-free materials. Custom colors available to all backers.</p>
+        </div>
+        <div class="project-content col-md-4 col-xs-12">
+          <div class="image-container">
+            <img src="images/project2.png" alt="project 2">
+          </div>
+          <h3>Peppermint Smart Home</h3>
+          <p>by Brian McDonald</p>
+          <p>Instantly upgrade your home with technology that keeps your family and home safe. We've made Peppermint easy to use. Just talk to your phone and Peppermint will help you every step of the way.</p>
+        </div>
+        <div class="project-content col-md-4 col-xs-12">
+          <div class="image-container">
+            <img src="images/project3.png" alt="project 3">
+          </div>
+          <h3>American Streetlife</h3>
+          <p>by Patrick Wallace</p>
+          <p>I've been traveling around the United States for the past two years. I've slept on hundreds of couches, more than a few benches, and captured my experiences in this 120 page photo album.</p>
+        </div>
+      </div>
+    </div>
+    <!--help section-->
+    <div class="container help">
+      <strong>Having trouble thinking of an idea?</strong>
+      <p>Inventorsâ€™ block strikes at the worst times. But thatâ€™s all changed with Jumpstartâ€™s Good Idea Generator Lite (GIGLi).</p>
+      <a href="#" class="btn btn-primary btn-md">Learn more</a>
+    </div>
+  </body>
 </html>
